ags (3.7.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed config header mess
	* fixed effect processors on output e.g. in AgsLine

ags (3.7.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed test device

ags (3.7.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed meson optional build

ags (3.7.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed effect processors on output e.g. in AgsLine
	* improved ags_soundcard_util_adjust_delay_and_attack() to correct attack within AGS_SOUNDCARD_DEFAULT_PERIOD
	* improved ags_fx_factory.c to respect chained to output or input

ags (3.7.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* changed base key to lower of AgsPitchSampler and AgsFFPlayer
	* improved SF2 support to select nearest sample
	* improved SFZ support

ags (3.7.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed meson build

ags (3.7.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed libgsequencer gtk-doc

ags (3.7.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_fast_pitch_util.c to do loudness correction
	* minor improvements

ags (3.6.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed gui-scale factor applied to AgsNotationEdit, AgsAutomationEdit and AgsWaveEdit

ags (3.6.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing meson build files

ags (3.6.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing meson build files

ags (3.6.26)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing meson build files

ags (3.6.25)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing meson build files

ags (3.6.24)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing meson build files

ags (3.6.23)
