@@ -1,3 +1,8 @@
+ags (3.7.8)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* minor improvements
+
 ags (3.7.7)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
